--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.8",
     "expo": "~50.0.13",
     "expo-app-loading": "^2.1.1",
@@ -21,7 +23,8 @@
     "react-native": "0.73.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2"
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "^4.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
