--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "expo": "~50.0.13",
     "expo-app-loading": "^2.1.1",
+    "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.5",
